# gpropz

./: .gitignore  README.md  firebase.json  meson.build  meson_options.txt  upload-docs.sh
demo/: demo-derivable.c  demo-derivable.h  demo-simple.c  demo-simple.h  main.c  meson.build
docs/: gpropz-docs.xml  gpropz-sections.txt  meson.build
docs/xml/: meson.build  pandoc.sh
src/: gpropz.c  gpropz.h  meson.build
